Trying to fix image on smaller screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -151,8 +151,8 @@ body {
         width: 80%;
     }
     #my-pic {
-        height: 50%;
-        width: 50%;
+        height: 350px;
+        width: 350px;
         margin: auto;
     }
     .list-ul {
